samples/_failures_safe/1761415519_f84331_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_015a95ce.c: In function ‘main’:
./samples/SAFE/__tmp_015a95ce.c:133: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_015a95ce.c:132:13: error: expected declaration or statement at end of input
  132 |             if
      |             ^~
./samples/SAFE/__tmp_015a95ce.c:132:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_015a95ce.c:132:13: error: expected declaration or statement at end of input
